# ha_emuleted_hue_admin

./: .gitignore  README.md  pyproject.toml  repository.yaml
emuleted_hue_admin/: Dockerfile  build.yaml  config.yaml  requirements.txt
emuleted_hue_admin/rootfs/app/: main.py
emuleted_hue_admin/rootfs/app/api/: __init__.py  dependencies.py
emuleted_hue_admin/rootfs/app/api/routes/: __init__.py  audit.py  backup.py  config.py  dashboard.py  diagnostics.py  entities.py  reload.py
emuleted_hue_admin/rootfs/app/frontend/: app.js  index.html
emuleted_hue_admin/rootfs/app/frontend/components/: audit.js  backup.js  config-form.js  dashboard.js  diagnostics.js  entities-table.js  utils.js  yaml-editor.js
emuleted_hue_admin/rootfs/app/frontend/styles/: main.css
emuleted_hue_admin/rootfs/app/models/: __init__.py  audit.py  config.py  entity.py
emuleted_hue_admin/rootfs/app/repositories/: __init__.py  yaml_repository.py
emuleted_hue_admin/rootfs/app/schemas/: __init__.py  common.py  config.py  entity.py
emuleted_hue_admin/rootfs/app/services/: __init__.py  backup_service.py  config_service.py  diagnostics_service.py  entity_service.py  ha_service.py
emuleted_hue_admin/rootfs/app/utils/: __init__.py  audit.py  logger.py  yaml_utils.py
emuleted_hue_admin/rootfs/etc/s6-overlay/s6-rc.d/emulated-hue-manager/: finish  run
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config_service.py  test_entity_service.py  test_yaml_repository.py
